// Copyright Â© 2018 Zhao Ming <mint.zhao.chiu@gmail.com>.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "config.proto";
option go_package = "github.com/mintzhao/topachain/types";

package types;

// Empty message
message Empty {}

// block header
message BlockHeader {
    uint64 blockHeight = 1;
    bytes previousBlock = 2;
    bytes txroot = 3;
}

// block tx
message BlockTxs {
    repeated Transaction txs = 1;
}

// block
message Block {
    BlockHeader header = 1;
    BlockTxs txs = 2;
}

// transaction
message Transaction {
    bytes payload = 1;
}

// genesis transaction proposal, contains configuration of the chain
message GenesisTxProposal {
    string name = 1; // applicaiton name
    AppConfig config = 2;
}